# DME22_solutions

./: README.md  cleaning_data.ipynb
lesson1/DME22/notebooks/les1/: cleaning_data.ipynb
lesson1/cleanup/: pyproject.toml
lesson1/cleanup/data/processed/: 20230220-1757.csv  20230220-1906.csv
lesson1/cleanup/notebook/: cleaning_data.ipynb
lesson1/cleanup/src/: main.py  preprocess.py  settings.py
