[tool.poetry]
name = "cleanup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
pydantic = "^1.10.5"
loguru = "^0.6.0"
logger = "^1.4"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
jupyter = "^1.0.0"
black = "^23.1.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
